--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body {
     background-color: #262626;
     position: relative;
+    font-family: 'Poppins', sans-serif;
 }
 
 #app {
@@ -22,13 +23,32 @@ body {
     /* display: flex;
     justify-content: center; */
     width: auto;
-    text-align: center;
     height: 25px;
     margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: auto;
+    height: auto;
+    margin: 20px;
+}
+#new-task-input {
+    background-color: #5d5d5d;
+    color: #e7e7e7;
+    border-radius: 10px;
+    font-size: 20px;
+    width: 70vw;
+    height: 110%;
+    font-size: 20px;
+    text-align: center;
+    margin: 20px;
+}
+#new-task-input:focus {
+    outline: none;
 }
 #new-task-btn {
-    margin: 10px;
     padding: 10px;
+    border-radius: 10px;
 }
 
 .black-hole {
@@ -76,4 +96,53 @@ body {
 }
 .green {
     background-color: var(--pastel-green);
+}
+
+/* CSS */
+.button-64 {
+    background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #ffffff;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 20px;
+    justify-content: center;
+    line-height: 1em;
+    /* max-width: 100%;
+    min-width: 140px; */
+    padding: 3px;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+}
+
+.button-64:active,
+.button-64:hover {
+    outline: 0;
+}
+
+.button-64 span {
+    background-color: rgb(5, 6, 45);
+    padding: 16px 24px;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    transition: 300ms;
+}
+
+.button-64:hover span {
+    background: none;
+}
+
+@media (min-width: 768px) {
+    .button-64 {
+        font-size: 24px;
+        min-width: 196px;
+    }
 }
